Increases size of badges, adjusts navbar, changes required field background color

--- a/backend_theme_v10/static/src/less/navbar.less
+++ b/backend_theme_v10/static/src/less/navbar.less
@@ -53,6 +53,7 @@ a.navbar-collapse.collapse {
 .app-name {
 	color: white;
     font-size: 22px;
-    font-weight: 500;
+    font-weight: 600;
     margin-right: 25px;
+    margin-top: 6px;
 }
