--- a/backend_theme_v10/static/src/less/bootswatch/variables.less
+++ b/backend_theme_v10/static/src/less/bootswatch/variables.less
@@ -14,9 +14,9 @@
 @gray-light:             #AEA79F;   // #999
 @gray-lighter:           lighten(@gray-base, 93.5%); // #eee
 
-@brand-primary:			#337AB7;
+@brand-primary:			#337AB7; // <== blue // #C75313; <== dark orange
 @brand-success:         #38B44A;
-@brand-info:            #337AB7; // same color als primary
+@brand-info:            #337AB7; // <== same color as primary // #1387c7; <== blue complementary to dark orange
 @brand-warning:         #EFB73E;
 @brand-danger:          #DF382C;
 
